# tmp

2/: CMakeLists.txt
2/headers/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
